<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="button_start">Start</string>
	<string name="title_activity_display_message">New Activity</string>
	<string name="title_activity_display_message_two">New Activity 2</string>
	<string name="town_prompt">Choose a town</string>
	<string name="edit_message">Edit message</string>
	<string name="button_send">Send</string>
	<string name="color_changer">Background color changer</string>
	<string name="color_changer_button">Change BG Color</string>
	<string name="seek_red">Red</string>
	<string name="seek_green">Green</string>
	<string name="seek_blue">Blue</string>
	<string name="btn_yes">Yes</string>
	<string name="btn_no">No</string>
	<string name="btn_submit">Submit</string>
	<string name="btn_player">Player</string>
	<string name="question">Proceed ?</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_prev">Prev</string>
	<string name="btn_next">Next</string>
	<string name="btn_play">Play</string>
	<string name="btn_pause">Pause</string>
	<string name="initial_Time">0 min, 0 sec</string>
	<string name="player_now">Now Playing:</string>
	<string-array name="town_choice">
	    <item>Kosice</item>
	    <item>Presov</item>
	    <item>Michalovce</item>
	    <item>Poprad</item>
	    <item>Ine</item>
	</string-array>
</resources>
