<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent" >

   <ImageButton
      android:id="@+id/butt_forward"
      android:contentDescription="@string/btn_next"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentLeft="true"
      android:layout_marginBottom="14dp"
      android:src="@drawable/ic_action_forward" />

   <ImageButton
      android:id="@+id/butt_prev"
      android:contentDescription="@string/btn_prev"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_alignTop="@+id/butt_pause"
      android:layout_marginLeft="22dp"
      android:layout_toRightOf="@+id/butt_pause"
      android:src="@drawable/ic_action_rewind" />

   <ImageButton
      android:id="@+id/butt_pause"
      android:contentDescription="@string/btn_pause"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/butt_play"
      android:layout_marginLeft="14dp"
      android:layout_toRightOf="@+id/butt_play"
      android:src="@drawable/ic_action_pause" />

   <ImageButton
      android:id="@+id/butt_play"
      android:contentDescription="@string/btn_play"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/butt_forward"
      android:layout_marginLeft="24dp"
      android:layout_toRightOf="@+id/butt_forward"
      android:src="@drawable/ic_action_play" />

   <TextView
      android:id="@+id/now_playing_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/butt_forward"
      android:text="@string/player_now"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <ImageView
      android:id="@+id/imageView1"
      android:contentDescription="@string/btn_player"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentBottom="true"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/now_playing_tv"
      android:src="@drawable/player_default" />

</RelativeLayout>