<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:entries="@array/town_choice"
        android:prompt="@string/town_prompt"
        android:layout_marginTop="14dp" />

	<Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/spinner1"
	    android:layout_centerHorizontal="true"
	    android:text="@string/button_start" />

	<EditText
	    android:id="@+id/editText1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/button1"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="23dp"
	    android:inputType="textMultiLine"
	    android:ems="10" />

	<Button
	    android:id="@+id/button2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/editText1"
	    android:layout_centerHorizontal="true"
	    android:hint="@string/edit_message"
	    android:text="@string/button_send" />

	<Button
	    android:id="@+id/button3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/button2"
	    android:layout_centerHorizontal="true"
	    android:onClick="seekBarColorChanger"
	    android:text="@string/color_changer_button" />

	<TextView
	    android:id="@+id/mlTextView"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/button3"
	    android:layout_below="@+id/button3"
	    android:layout_marginTop="62dp"
	    android:ems="10"
	    android:maxLines="10"
	    android:lines="5" >

	    <requestFocus />
	</TextView>

</RelativeLayout>
